src/test/deca/context/invalid/ContextAvecObjet/DeclClass/superclassNotClass.deca
// Description:
//    Superclass de type non classe
//
// Resultats:
//    Erreur contextuelle
//    Le champs superclass doit être une classe

class A extends int {}